# foamCD

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  config.yaml  pyproject.toml
.github/workflows/: ci.yaml
plugins/: openacc_detector.py  openfoam_detector.py  openmp_detector.py
src/: config.py  db.py  entity.py  feature_detectors.py  git.py  markdown.py  markdown_base.py  markdown_class_index.py  markdown_concepts_index.py  markdown_functions_index.py  parse.py  plugin_system.py  tree_sitter_subparser.py
src/foamcd/: config.py  db.py  feature_detectors.py  markdown.py  markdown_base.py  markdown_class_index.py  parse.py  version.py
tests/: conftest.py  test_config.yaml
tests/fixtures/: cpp_attributes.cpp  cpp_features.cpp  cpp_features.hpp  simple_class.hpp
tests/fixtures_unit_tests/: unit_tests_cpp_features.cpp
tests/unit/: test_clang_parser.py  test_cpp_attributes.py  test_cpp_feature_detection.py  test_db.py  test_declaration_definition_links.py  test_entity.py  test_inheritance_tracking.py  test_plugin_system.py
