[project]
name = "foamCD"
version = "0.1.0"
description = "Documenting C++ code the right way, focusing on OpenFOAM-like libraries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clang>=20.1.0",
    "colorlog>=6.9.0",
    "libclang>=18.1.1",
    "omegaconf>=2.3.0",
]

[project.scripts]
foamcd-parse = "parse:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv]
package = true
