[project]
name = "foamCD"
version = "0.1.0"
description = "Documenting C++ code the right way, focusing on OpenFOAM-like libraries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clang>=20.1.0",
    "colorlog>=6.9.0",
    "jinja2>=3.1.6",
    "libclang>=18.1.1",
    "omegaconf>=2.3.0",
    "python-frontmatter>=1.1.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-cpp>=0.23.4",
]

[project.scripts]
foamcd-parse = "parse:main"
foamcd-markdown = "markdown:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv]
package = true
